artifacts/platform/argocd/manifests/02-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: home-arpa-ca
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.home.arpa
    secretName: argocd-tls
  rules:
  - host: argocd.home.arpa
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              name: http
